--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -6,16 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".home_page">
 
-    <ImageView
-        android:id="@+id/redBackground2"
-        android:layout_width="522dp"
-        android:layout_height="281dp"
-        android:layout_marginBottom="576dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="421dp"
+        android:layout_height="92dp"
+        android:layout_marginBottom="20dp"
+        android:background="#E73927"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/background" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -32,12 +33,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="672dp"
+        android:layout_marginBottom="32dp"
         android:fontFamily="@font/viga"
         android:text="Welcome,"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -58,13 +59,13 @@
         android:layout_width="314dp"
         android:layout_height="146dp"
         android:layout_marginStart="48dp"
-        android:layout_marginBottom="428dp"
+        android:layout_marginBottom="83dp"
         android:background="@drawable/edit_round2"
         android:fontFamily="@font/open_sans_bold"
         android:text="Add Medications"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="28sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/add_measurements_btn"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -72,16 +73,17 @@
         android:layout_width="314dp"
         android:layout_height="146dp"
         android:layout_marginStart="48dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginBottom="97dp"
         android:background="@drawable/edit_round2"
         android:fontFamily="@font/open_sans_bold"
         android:text="Add Measurements"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="26sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/view5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <View
+        android:id="@+id/view5"
         android:layout_width="wrap_content"
         android:layout_height="2dp"
         android:layout_marginBottom="100dp"
@@ -128,11 +130,11 @@
         android:id="@+id/imageUserButton"
         android:layout_width="56dp"
         android:layout_height="51dp"
-        android:layout_marginStart="332dp"
+        android:layout_marginStart="42dp"
         android:layout_marginBottom="40dp"
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageHistoryButton"
         app:srcCompat="@drawable/user" />
 
     <TextView
@@ -151,36 +153,36 @@
         android:id="@+id/textViewToday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="124dp"
+        android:layout_marginStart="60dp"
         android:layout_marginBottom="8dp"
         android:text="Today"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textViewHome" />
 
     <TextView
         android:id="@+id/textViewHistory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="240dp"
+        android:layout_marginStart="66dp"
         android:layout_marginBottom="8dp"
         android:text="History"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textViewToday" />
 
     <TextView
         android:id="@+id/textViewProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="340dp"
+        android:layout_marginStart="44dp"
         android:layout_marginBottom="8dp"
         android:text="Profile"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textViewHistory" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
