--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -37,14 +37,14 @@
         android:id="@+id/login_button"
         android:layout_width="285dp"
         android:layout_height="69dp"
-        android:layout_marginBottom="260dp"
+        android:layout_marginBottom="43dp"
         android:background="@drawable/edit_roundmain"
         android:fontFamily="@font/viga"
         android:text="Already a member? Login"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guest_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent" />
