--- a/app/src/main/res/layout/activity_new_measurements_heartrate.xml
+++ b/app/src/main/res/layout/activity_new_measurements_heartrate.xml
@@ -7,16 +7,28 @@
     tools:context=".new_measurements_heartrate">
 
 
-    <ImageView
-        android:id="@+id/redBackground4"
-        android:layout_width="522dp"
-        android:layout_height="281dp"
-        android:layout_marginBottom="584dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="421dp"
+        android:layout_height="92dp"
+        android:background="#E73927"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/background" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <ImageButton
+        android:id="@+id/imageBack"
+        android:layout_width="64dp"
+        android:layout_height="68dp"
+        android:layout_marginEnd="360dp"
+        android:layout_marginBottom="24dp"
+        android:backgroundTint="#E73927"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/backarrow" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -183,15 +195,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageButton
-        android:id="@+id/imageBack1"
-        android:layout_width="64dp"
-        android:layout_height="68dp"
-        android:layout_marginEnd="356dp"
-        android:layout_marginBottom="68dp"
-        android:backgroundTint="#E73927"
-        app:layout_constraintBottom_toTopOf="@+id/bloodPressure_Box"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/backarrow" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
