--- a/app/src/main/res/layout/activity_schedule_measurements.xml
+++ b/app/src/main/res/layout/activity_schedule_measurements.xml
@@ -6,16 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".schedule_measurements">
 
-    <ImageView
-        android:id="@+id/redBackground2"
-        android:layout_width="522dp"
-        android:layout_height="281dp"
-        android:layout_marginBottom="576dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="421dp"
+        android:layout_height="92dp"
+        android:background="#E73927"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/background" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <Button
