--- a/app/src/main/res/layout/activity_new_measurements_temperature.xml
+++ b/app/src/main/res/layout/activity_new_measurements_temperature.xml
@@ -43,14 +43,15 @@
 
 
     <TextView
+        android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="592dp"
+        android:layout_marginBottom="31dp"
         android:text="Body Temperature"
         android:textColor="#000000"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="21sp"
+        app:layout_constraintBottom_toTopOf="@+id/time_txt1"
         app:layout_constraintStart_toStartOf="parent" />
 
 
@@ -58,25 +59,25 @@
         android:id="@+id/body_tempt_box"
         android:layout_width="107dp"
         android:layout_height="47dp"
-        android:layout_marginStart="204dp"
-        android:layout_marginBottom="580dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/edittext3"
         android:ems="10"
         android:inputType="textPersonName"
         android:paddingStart="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/time_txt1"
+        app:layout_constraintStart_toEndOf="@+id/textView18" />
 
     <TextView
         android:id="@+id/time_txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="532dp"
+        android:layout_marginBottom="23dp"
         android:text="Time"
         android:textColor="#000000"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="21sp"
+        app:layout_constraintBottom_toTopOf="@+id/time_button_two"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -84,14 +85,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="460dp"
+        android:layout_marginBottom="27dp"
         android:width="125dp"
         android:height="50dp"
         android:background="@drawable/edittext3"
         android:onClick="popTimePicker"
         android:text="Set Time"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/frequency_txt1"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="OnClick" />
 
@@ -100,11 +101,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="404dp"
+        android:layout_marginBottom="22dp"
         android:text="Frequency"
         android:textColor="#000000"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="21sp"
+        app:layout_constraintBottom_toTopOf="@+id/frequency_spinner_nine"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
@@ -112,9 +113,9 @@
         android:layout_width="143dp"
         android:layout_height="54dp"
         android:layout_marginEnd="252dp"
-        android:layout_marginBottom="328dp"
+        android:layout_marginBottom="27dp"
         android:backgroundTint="#FDCB00"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/duration_txt1"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
@@ -122,11 +123,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="272dp"
+        android:layout_marginBottom="25dp"
         android:text="Duration"
         android:textColor="#000000"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="21sp"
+        app:layout_constraintBottom_toTopOf="@+id/startButton"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
