--- a/app/src/main/res/layout/activity_change_name.xml
+++ b/app/src/main/res/layout/activity_change_name.xml
@@ -78,7 +78,7 @@
         android:id="@+id/buttonsave"
         android:layout_width="247dp"
         android:layout_height="49dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/edit_round"
         android:fontFamily="@font/viga"
         android:text="Save Changes"
@@ -115,6 +115,18 @@
         app:layout_constraintHorizontal_bias="0.069"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="20dp"
+        android:text="Email"
+        android:textColor="#000000"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/editemail"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <EditText
         android:id="@+id/editfirstname"
         android:layout_width="372dp"
@@ -134,22 +146,39 @@
         android:id="@+id/editlastname"
         android:layout_width="372dp"
         android:layout_height="71dp"
-        android:layout_marginBottom="61dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/edittext3"
         android:ems="10"
         android:hint="Last Name"
         android:inputType="textPersonName"
         android:paddingStart="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonsave"
+        app:layout_constraintBottom_toTopOf="@+id/textView15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editemail"
+        android:layout_width="372dp"
+        android:layout_height="71dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/edittext3"
+        android:ems="10"
+        android:hint="Email"
+        android:inputType="textPersonName"
+        android:paddingStart="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonsave"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/cancelBtn"
         android:layout_width="247dp"
         android:layout_height="49dp"
-        android:layout_marginBottom="144dp"
+        android:layout_marginBottom="48dp"
         android:background="@drawable/editttextcancel"
         android:fontFamily="@font/viga"
         android:text="Cancel"
