--- a/app/src/main/res/layout/activity_history_for_medications.xml
+++ b/app/src/main/res/layout/activity_history_for_medications.xml
@@ -21,12 +21,11 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="238dp"
-        android:layout_height="243dp"
-        android:layout_marginStart="240dp"
-        android:layout_marginBottom="564dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="174dp"
+        android:layout_height="128dp"
+        android:layout_marginStart="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/measurementsView"
+        app:layout_constraintStart_toEndOf="@+id/welcomeNameView"
         app:srcCompat="@drawable/pills" />
 
     <TextView
