--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -20,12 +20,12 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="238dp"
-        android:layout_height="243dp"
-        android:layout_marginStart="240dp"
-        android:layout_marginBottom="564dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="174dp"
+        android:layout_height="128dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/add_medications_btn"
+        app:layout_constraintStart_toEndOf="@+id/firstnameview"
         app:srcCompat="@drawable/pills" />
 
     <TextView
