--- a/app/src/main/res/layout/activity_instruction_slideone.xml
+++ b/app/src/main/res/layout/activity_instruction_slideone.xml
@@ -10,7 +10,8 @@
         android:id="@+id/instructione_one_btn"
         android:layout_width="514dp"
         android:layout_height="266dp"
-        android:layout_marginStart="76dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/next"
