--- a/app/src/main/res/layout/activity_instruction_slidethree.xml
+++ b/app/src/main/res/layout/activity_instruction_slidethree.xml
@@ -12,6 +12,7 @@
         android:layout_width="514dp"
         android:layout_height="266dp"
         android:layout_marginStart="76dp"
+        android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/next"
