--- a/app/src/main/res/layout/activity_intake_confirmation.xml
+++ b/app/src/main/res/layout/activity_intake_confirmation.xml
@@ -84,9 +84,9 @@
         android:layout_width="58dp"
         android:layout_height="52dp"
         android:layout_marginEnd="60dp"
-        android:layout_marginBottom="568dp"
+        android:layout_marginBottom="87dp"
         android:backgroundTint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/view6"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/tts" />
 
