--- a/app/src/main/res/layout/activity_new_measurements_cholesterol.xml
+++ b/app/src/main/res/layout/activity_new_measurements_cholesterol.xml
@@ -43,40 +43,40 @@
 
 
     <TextView
+        android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="592dp"
+        android:layout_marginBottom="28dp"
         android:text="Cholesterol Levels"
         android:textColor="#000000"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="21sp"
+        app:layout_constraintBottom_toTopOf="@+id/time_txt1"
         app:layout_constraintStart_toStartOf="parent" />
-
 
     <EditText
         android:id="@+id/cholesterol_box"
         android:layout_width="107dp"
         android:layout_height="47dp"
-        android:layout_marginStart="204dp"
-        android:layout_marginBottom="580dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/edittext3"
         android:ems="10"
         android:inputType="textPersonName"
         android:paddingStart="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/time_txt1"
+        app:layout_constraintStart_toEndOf="@+id/textView12" />
 
     <TextView
         android:id="@+id/time_txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="532dp"
+        android:layout_marginBottom="22dp"
         android:text="Time"
         android:textColor="#000000"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="21sp"
+        app:layout_constraintBottom_toTopOf="@+id/time_btn"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -84,14 +84,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="460dp"
+        android:layout_marginBottom="29dp"
         android:width="125dp"
         android:height="50dp"
         android:background="@drawable/edittext3"
         android:onClick="popTimePicker"
         android:text="Set Time"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/frequency_txt1"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="OnClick" />
 
@@ -100,11 +100,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="404dp"
+        android:layout_marginBottom="21dp"
         android:text="Frequency"
         android:textColor="#000000"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="21sp"
+        app:layout_constraintBottom_toTopOf="@+id/frequency_spinner_five"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
@@ -112,9 +112,9 @@
         android:layout_width="143dp"
         android:layout_height="54dp"
         android:layout_marginEnd="252dp"
-        android:layout_marginBottom="328dp"
+        android:layout_marginBottom="27dp"
         android:backgroundTint="#FDCB00"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/duration_txt1"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
@@ -122,11 +122,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="272dp"
+        android:layout_marginBottom="27dp"
         android:text="Duration"
         android:textColor="#000000"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="21sp"
+        app:layout_constraintBottom_toTopOf="@+id/startButton"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
