--- a/app/src/main/res/layout/activity_today_page.xml
+++ b/app/src/main/res/layout/activity_today_page.xml
@@ -10,35 +10,24 @@
         android:id="@+id/toolbar"
         android:layout_width="421dp"
         android:layout_height="92dp"
+        android:layout_marginBottom="20dp"
         android:background="#E73927"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="238dp"
-        android:layout_height="243dp"
-        android:layout_marginStart="240dp"
-        android:layout_marginBottom="564dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/pills" />
-
     <TextView
         android:id="@+id/welcomeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="672dp"
+        android:layout_marginBottom="32dp"
         android:fontFamily="@font/viga"
         android:text="Welcome,"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -295,25 +284,18 @@
             app:tint="#FDCB00"
             app:layout_constraintBottom_toTopOf="@+id/card_view_medicine"
             app:layout_constraintStart_toEndOf="@+id/textView14"
-            app:srcCompat="@android:drawable/arrow_down_float" /><![CDATA[
+            app:srcCompat="@android:drawable/arrow_down_float" />
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="174dp"
+            android:layout_height="128dp"
+            android:layout_marginStart="252dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView14"
+            app:layout_constraintStart_toStartOf="@+id/textView14"
+            app:srcCompat="@drawable/pills" />
 
 
-
-
-
-
-
-
-
-        app:cardCornerRadius="20dp"
-            app:cardMaxElevation="20dp"
-            tools:layout_editor_absoluteY="377dp" />
-
-
-
-
-
-    ]]>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
